Demo conversacion yggs

--- a/index.html
+++ b/index.html
@@ -1,22 +1,9 @@
 <!doctype html>
 <html>
     <head>
+        <link href="https://fonts.googleapis.com/css2?family=Sen&display=swap" rel="stylesheet">
         <style>
-            @font-face 
-            {
-                font-family: 'Montserrat-SemiBold';
-                src: url(fonts/Montserrat-SemiBold.ttf);
-            }  
-            @font-face 
-            {
-                font-family: 'Sen','Sen Regular';
-                src: url(fonts/Sen-Regular.ttf);
-            }  
-            @font-face 
-            {
-                font-family: 'OCRAExtended','OCR A Extended';
-                src: url(fonts/OCRAEXT.TTF);
-            }  
+           
             *{
                 margin:0px;
                 padding: 0px;
