--- a/index.html
+++ b/index.html
@@ -1,7 +1,10 @@
 <!doctype html>
 <html>
     <head>
-        <link href="https://fonts.googleapis.com/css2?family=Sen&display=swap" rel="stylesheet">
+       
+        <style>
+            @import url('https://fonts.googleapis.com/css2?family=Sen&display=swap');
+            </style>
         <style>
            
             *{
