Demo conversacion yggs

--- a/index.html
+++ b/index.html
@@ -2,9 +2,7 @@
 <html>
     <head>
        
-        <style>
-            @import url('https://fonts.googleapis.com/css2?family=Sen&display=swap');
-            </style>
+        <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@600&display=swap" rel="stylesheet">
         <style>
            
             *{
@@ -20,6 +18,7 @@
                 width: 100% !important;
                 height: 100% !important;
                 border:none;
+                font-family: 'Montserrat', 'Montserrat-SemiBold',sans-serif !important;
             }
         </style>
     </head>
