--- a/y1g1g2s3235711131719102020/index.html
+++ b/y1g1g2s3235711131719102020/index.html
@@ -69,7 +69,7 @@
    
    screen.orientation.lock("portrait")
 	.then(function() {
-		//alert('Locked');
+		alert('Locked');
 	})
 	.catch(function(error) {
 		//alert(error);
