ajuste responsive para mobiles

--- a/y1g1g2s3235711131719102020/index.html
+++ b/y1g1g2s3235711131719102020/index.html
@@ -217,10 +217,10 @@
    function landScapeOrientation()
    {
         var orientation = (screen.orientation || {}).type || screen.mozOrientation || screen.msOrientation;
-        console.log(orientation);
+        alert(orientation);
         if (orientation === undefined) 
         {
-            console.log('no soportado');
+            alert.log('no soportado');
             return;
         }
         if (orientation !== "landscape-primary") {
