ajuste responsive para mobiles

--- a/y1g1g2s3235711131719102020/index.html
+++ b/y1g1g2s3235711131719102020/index.html
@@ -140,6 +140,7 @@
    {
        while(stack.length>0)stack.pop();
        idPage=obj.getAttribute("id-page");
+       document.getElementById("backF").style.display='none';
        loadPage(idPage);
        document.getElementById("btnTableContent").click(); 
    }
